feat [James]: added stringHelper.js

--- a/Views/Shared/Dashboard_Layout.cshtml
+++ b/Views/Shared/Dashboard_Layout.cshtml
@@ -797,5 +797,6 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 
 </script>
+<script src="~/js/stringHelpers.js"></script>
 </body>
 </html>
