--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -142,7 +142,7 @@
         });
     });
 </script>
-
+<script src="~/js/stringHelpers.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
