--- a/Views/Shared/Admin_Layout.cshtml
+++ b/Views/Shared/Admin_Layout.cshtml
@@ -288,5 +288,6 @@ document.addEventListener('DOMContentLoaded', function() {
     });
 });
     </script>
+    <script src="~/js/stringHelpers.js"></script>
 </body>
 </html>
