--- a/Views/Homeowner/Payment.cshtml
+++ b/Views/Homeowner/Payment.cshtml
@@ -1,11 +1,12 @@
 @page
 @{
     Layout = "~/Views/Shared/Dashboard_Layout.cshtml";
+    var maintenancePending = ViewBag.MaintenanceBookings;
 }
 
 <link rel="stylesheet" href="~/css/homeowners/payment.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-
+<input type="hidden" id="viewbagData" value=" @Html.Raw(Json.Serialize(ViewBag.MaintenanceBookings))" />
 <section class="payment-section">
     <div class="container">
         <div class="payment-header">
@@ -138,5 +139,8 @@
         </div>
     </div>
 </div>
-
+<script>
+    let maintenanceBookings = @Html.Raw(Json.Serialize(ViewBag.MaintenanceBookings));
+    
+    </script>
 <script src="~/js/payment.js" asp-append-version="true"></script>
