feat:[Edem] Temporary Fix

--- a/Views/Homeowner/Dashboard.cshtml
+++ b/Views/Homeowner/Dashboard.cshtml
@@ -471,3 +471,8 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="~/js/dashboard.js" asp-append-version="true"></script>
+
+<script>
+    // Set current user ID
+    const currentUserId = @user.user_id;
+</script>
